@@ -1,7 +1,7 @@
 Shell=$(which bash)
 #!${Shell}
 
-SupportV="0.1.30"
+SupportV="0.1.31"
 
 ProgDir=$1
 shift
@@ -293,11 +293,7 @@ UseBash()
 									if [ -f "${TheBinDir}/${name}" ]; then
 										echo -e "\e[1;42m[${Lang} Code Compiled]\e[0m"
 									else
-										ERROR=$(echo ${ERROR} | tr '|' '\n')
-										echo -en "\e[1;31m[\e[0m"
-										echo -en "\e[1;41mERROR\e[0m"
-										echo -e "\e[1;31m]\e[0m"
-										echo -e "\e[1;31m${ERROR}\e[0m"
+										errorCode "cpl" "ERROR" "${ERROR}"
 									fi
 								else
 									errorCode "cpl" "already" ${name}
@@ -321,11 +317,7 @@ UseBash()
 							if [ -f "${TheBinDir}/${src}" ]; then
 								echo -e "\e[1;42m[${Lang} Code Compiled]\e[0m"
 							else
-								ERROR=$(echo ${ERROR} | tr '|' '\n')
-								echo -en "\e[1;31m[\e[0m"
-								echo -en "\e[1;41mERROR\e[0m"
-								echo -e "\e[1;31m]\e[0m"
-								echo -e "\e[1;31m${ERROR}\e[0m"
+								errorCode "cpl" "ERROR" "${ERROR}"
 							fi
 						else
 							errorCode "cpl" "already" ${src}
