@@ -1,7 +1,7 @@
 Shell=$(which bash)
 #!${Shell}
 
-SupportV="0.1.29"
+SupportV="0.1.30"
 
 ProgDir=$1
 shift
@@ -283,11 +283,7 @@ UsePerl()
 									if [ -f "${TheBinDir}/${name}" ]; then
 										echo -e "\e[1;45m[${Lang} Code Compiled]\e[0m"
 									else
-										ERROR=$(echo ${ERROR} | tr '|' '\n')
-										echo -en "\e[1;31m[\e[0m"
-										echo -en "\e[1;41mERROR\e[0m"
-										echo -e "\e[1;31m]\e[0m"
-										echo -e "\e[1;31m${ERROR}\e[0m"
+										errorCode "cpl" "ERROR" "${ERROR}"
 									fi
 								else
 									errorCode "cpl" "already" ${name}
@@ -311,11 +307,7 @@ UsePerl()
 							if [ -f "${TheBinDir}/${src}" ]; then
 								echo -e "\e[1;45m[${Lang} Code Compiled]\e[0m"
 							else
-								ERROR=$(echo ${ERROR} | tr '|' '\n')
-								echo -en "\e[1;31m[\e[0m"
-								echo -en "\e[1;41mERROR\e[0m"
-								echo -e "\e[1;31m]\e[0m"
-								echo -e "\e[1;31m${ERROR}\e[0m"
+								errorCode "cpl" "ERROR" "${ERROR}"
 							fi
 						else
 							errorCode "cpl" "already" ${src}
