@@ -1,7 +1,7 @@
 Shell=$(which bash)
 #!${Shell}
 
-SupportV="0.1.30"
+SupportV="0.1.31"
 
 ProgDir=$1
 shift
@@ -294,11 +294,7 @@ UsePython()
 									if [ -f "${TheBinDir}/${name}" ]; then
 										echo -e "\e[1;43m[${Lang} Code Compiled]\e[0m"
 		                                                        else
-										ERROR=$(echo ${ERROR} | tr '|' '\n')
-										echo -en "\e[1;31m[\e[0m"
-										echo -en "\e[1;41mERROR\e[0m"
-										echo -e "\e[1;31m]\e[0m"
-										echo -e "\e[1;31m${ERROR}\e[0m"
+										errorCode "cpl" "ERROR" "${ERROR}"
 									fi
 								else
 									errorCode "cpl" "already" ${name}
@@ -322,11 +318,7 @@ UsePython()
 							if [ -f "${TheBinDir}/${src}" ]; then
 								echo -e "\e[1;43m[${Lang} Code Compiled]\e[0m"
                                                         else
-								ERROR=$(echo ${ERROR} | tr '|' '\n')
-								echo -en "\e[1;31m[\e[0m"
-								echo -en "\e[1;41mERROR\e[0m"
-								echo -e "\e[1;31m]\e[0m"
-								echo -e "\e[1;31m${ERROR}\e[0m"
+								errorCode "cpl" "ERROR" "${ERROR}"
 							fi
 						#Code is already found
 						else
