@@ -5,6 +5,7 @@ Added:
 	Langauges pull compiler/interpreter from clide.conf
 	adding packages with source code (Lang.Java)
 	Use custom project templates
+	Provided better support for Java Projects (Lang.Java)
 
 Concept:
 	Managing different project types
@@ -14,3 +15,4 @@ Bug Fixes:
 	"AddAlias.sh" was not finding "errorCode.sh"
 	performance improvements (CLI User Interface only changes after TRUE changes)
 	code refactering
+	moved Compile error message to "errorCode.sh"
